# uvtools

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  environment.yml  plot_uvfits.ipynb  pyproject.toml  setup.py
.github/: dependabot.yml  labels.yml
.github/workflows/: check-build.yaml  publish-to-test-pypi.yaml  publish.yaml  python-package-conda.yml  release-draft.yml  tests.yml
examples/: dayenu_demo.ipynb  diff_plotter_demo.ipynb  fancy_plotters_demo.ipynb  linear_clean_demo.ipynb
scripts/: plot_uv.py  uvtools_print_corr_metric.py  uvtools_print_data.py  uvtools_print_metadata.py
tests/: dspec_test.py  fringe_test.py
uvtools/: __init__.py  binning.py  branch_scheme.py  dspec.py  frf.py  fringe.py  linclean.py  plot.py  plot_uvfits.ipynb  utils.py  version.py
uvtools/data/: make_plot_data.ipynb  simulation_baseline_ant1_23_ant2_27_baseline_len_58.43m.npz
uvtools/tests/: binning_test.py  dspec_test.py  fringe_test.py  test_dspec.py  test_linclean.py  test_plot.py  test_utils.py
